# mercury_oxide_elixir

./: .gitignore  README.md  mix.exs
lib/: mercury_oxide.ex
lib/mercury_oxide/: native.ex
native/mercury_oxide/: Cargo.toml  README.md
native/mercury_oxide/src/: lib.rs
test/: mercury_oxide_test.exs
