[package]
name = "mercury_oxide"
version = "0.1.1"
authors = []
edition = "2018"

[lib]
name = "mercury_oxide"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21.0"
serde_rustler = {git = "https://github.com/thomas9911/serde_rustler", branch = "0_21"}
lazy_static = "1.0"
liquid = "0.18"