[package]
name = "mercury_oxide"
version = "0.2.0"
authors = []
edition = "2021"

[lib]
name = "mercury_oxide"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.23.0"
serde_rustler = {git = "https://github.com/avencera/serde_rustler", branch = "rustler-0.23"}
lazy_static = "1.0"
liquid = "0.26.0"
